site: learning resources - vulnerabilities, design patterns

--- a/scalus-site/content/onboarding/for-cardano-developers.mdx
+++ b/scalus-site/content/onboarding/for-cardano-developers.mdx
@@ -133,10 +133,17 @@ The concepts are identical, just expressed in Scala syntax!
 **Goal:** Master advanced patterns and optimizations
 
 <Steps>
+
+#### Optimisations
 - [ ] **[Advanced Optimizations](/docs/smart-contract/optimisations)** - Reduce script size and execution costs
 - [ ] **[Collections](/docs/language-guide/collections)** - Efficient `List` and `AssocMap` operations
 - [ ] **[Modules](/docs/language-guide/modules)** - Organize code into reusable libraries
 - [ ] **[Real-World Examples](https://github.com/nau/scalus/tree/master/scalus-examples)** - Study production validator patterns
+
+#### Design Patterns & Security
+
+- [ ] **[Design Patterns](/docs/learning)** - Proven patterns for efficient multi-input validators
+- [ ] **[Plutus Vulnerabilities](/docs/learning/plutus-vulnerabilities)** - Common security issues and mitigations
 
 **🎯 Quick Win:** Optimize a validator to reduce execution units by 20-30% using advanced techniques.
 
