--- a/scalus-site/content/onboarding/for-scala-developers.mdx
+++ b/scalus-site/content/onboarding/for-scala-developers.mdx
@@ -69,6 +69,7 @@ You'll learn:
 
 **Essential Reading:**
 - [ ] **[Understanding eUTxO Model](https://docs.cardano.org/about-cardano/learn/eutxo-explainer)** - How Cardano manages state (15 min)
+- [ ] **[The EUTxO-Model - Plutus Pioneer Program](https://www.youtube.com/watch?v=ulYDNaEKf4g)** - Learning details (25 min)
 - [ ] **[Validators in Depth](/docs/smart-contract/validators)** - Spending, minting, rewarding, certifying validators (20 min)
 
 **Key Concepts to Grasp:**
@@ -164,10 +165,17 @@ class MyValidatorTest extends AnyFunSuite with ScalusTest:
 
 **Goal:** Master optimizations and advanced validator patterns
 <Steps>
+
+#### Optimisations
 - [ ] **[Advanced Optimizations](/docs/smart-contract/optimisations)** - Reduce script size and execution costs
 - [ ] **[Modules](/docs/language-guide/modules)** - Build reusable validator libraries
 - [ ] **[Real-World Examples](https://github.com/nau/scalus/tree/master/scalus-examples)** - Study production patterns
 - [ ] **[Transaction Builder](/docs/transaction-builder)** - Build complete off-chain applications
+
+#### Design Patterns & Security
+
+- [ ] **[Design Patterns](/docs/learning)** - Proven patterns for efficient multi-input validators
+- [ ] **[Plutus Vulnerabilities](/docs/learning/plutus-vulnerabilities)** - Common security issues and mitigations
 
 **🎯 Quick Win:** Optimize a validator to reduce execution units by 20-30% using inlining and macros.
 
@@ -325,10 +333,11 @@ object MyValidator extends Validator
 1. **[Check Hello Cardano Smart contract](/docs/get-started#get-your-first-scalus-validator)** → 5 min
 2. **[First Smart Contract](/docs/smart-contract/developing-smart-contracts)** → 30 min
 3. **[eUTxO Model Explainer](https://docs.cardano.org/about-cardano/learn/eutxo-explainer)** → 15 min
-4. **[Validators in Depth](/docs/smart-contract/validators)** → 20 min
-5. **[Supported Features](/docs/language-guide/support)** → 10 min
-6. **[Testing Smart Contracts](/docs/smart-contract/testing)** → 20 min
-7. **Build your own validator** → 45 min
+4. **[The EUTxO-Model - Plutus Pioneer Program](https://www.youtube.com/watch?v=ulYDNaEKf4g)** - 25 min
+5. **[Validators in Depth](/docs/smart-contract/validators)** → 20 min
+6. **[Supported Features](/docs/language-guide/support)** → 10 min
+7. **[Testing Smart Contracts](/docs/smart-contract/testing)** → 20 min
+8. **Build your own validator** → 45 min
 
 ### For Scala Beginners (Total: ~1 day)
 
