docs: create security section and rename offchain-applications to dapps
- Create /security/ with index (general principles) and common-vulnerabilities
- Rename /offchain-applications/ to /dapps/
- Move scalus-starter to /dapps/building-first-dapp
- Remove /learning/ section (content distributed to security and dapps)
- Update all internal links and add redirects

--- a/scalus-site/content/dapps/building-first-dapp.mdx
+++ b/scalus-site/content/dapps/building-first-dapp.mdx
@@ -1,6 +1,6 @@
 ---
-title: Building a Complete DApp with Scalus Starter
-sidebarTitle: Scalus Starter
+title: Building Your First DApp with Scalus Starter
+sidebarTitle: Building First DApp
 description: Learn how to build a complete Cardano DApp using Scalus Starter. This hands-on tutorial covers smart contracts, transaction building, REST APIs, and testing.
 ---
 
