--- a/scalus-site/content/design-patterns/utxo-indexer.mdx
+++ b/scalus-site/content/design-patterns/utxo-indexer.mdx
@@ -172,7 +172,7 @@ TxBuilder(env)
 </Callout>
 
 <Callout type="warning">
-**Double Satisfaction:** The singular UTxO indexer patterns (`oneToOne`, `oneToMany`) do not provide built-in protection against double satisfaction. Implement your own protection based on your contract's needs. See [Plutus Vulnerabilities](/docs/learning/plutus-vulnerabilities#3-double-satisfaction).
+**Double Satisfaction:** The singular UTxO indexer patterns (`oneToOne`, `oneToMany`) do not provide built-in protection against double satisfaction. Implement your own protection based on your contract's needs. See [Common Vulnerabilities](/docs/security/common-vulnerabilities#3-double-satisfaction).
 </Callout>
 
 ## Related Patterns
