--- a/scalus-site/content/design-patterns/withdraw-zero.mdx
+++ b/scalus-site/content/design-patterns/withdraw-zero.mdx
@@ -108,7 +108,7 @@ inline override def reward(
 </Callout>
 
 <Callout type="warning">
-**Double Satisfaction:** When using this pattern with multiple inputs, ensure proper input-to-output mapping to prevent double satisfaction vulnerabilities. See [Plutus Vulnerabilities](/docs/learning/plutus-vulnerabilities#3-double-satisfaction).
+**Double Satisfaction:** When using this pattern with multiple inputs, ensure proper input-to-output mapping to prevent double satisfaction vulnerabilities. See [Common Vulnerabilities](/docs/security/common-vulnerabilities#3-double-satisfaction).
 </Callout>
 
 ### Example: Optimized Payment Splitter
