--- a/scalus-site/content/get-started/for-scala-developers.mdx
+++ b/scalus-site/content/get-started/for-scala-developers.mdx
@@ -152,8 +152,8 @@ class MyValidatorTest extends AnyFunSuite with ScalusTest:
 
 #### Design Patterns & Security
 
-- [ ] **[Design Patterns](/docs/learning)** - Proven patterns for efficient multi-input validators
-- [ ] **[Plutus Vulnerabilities](/docs/learning/plutus-vulnerabilities)** - Common security issues and mitigations
+- [ ] **[Design Patterns](/docs/design-patterns)** - Proven patterns for efficient multi-input validators
+- [ ] **[Security Guide](/docs/security)** - Common security issues and mitigations
 
 **🎯 Quick Win:** Optimize a validator to reduce execution units by 20-30% using inlining and macros.
 
